[project]
name = "pyplanc"
version = "0.0.1"
requires-python = ">=3.10"
readme = "python/README.md"
license.file = "license.md"
authors = [
    { name = "Andrew Robbins", email = "andrew@robbinsa.me"},
    { name = "Yichen Wang", email = "wayichen@umich.edu"},
    { name = "Joshua Welch", email = "welchjd@umich.edu"},
    { name = "Ramakrishnan Kannan", email = "kannanr@ornl.gov"}
]
maintainers = [
    { name = "Andrew Robbins", email = "andrew@robbinsa.me"}
]

dependencies = [
    "numpy>=1.23.5, <2.3",
    "threadpoolctl>=3.4.0, <4.0",
    "scipy>=1.12.0",
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS :: MacOS X",
  "Intended Audience :: Science/Research"
]

[project.urls]
Homepage = "https://welch-lab.github.io"
Repository = "https://github.com/theAeon/planc"

[project.optional-dependencies]
test = [
  "pytest >=6.0",
  "pyyaml >=6.0"
]
dev = [
    "ruff"
]

[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0", "numpy>=2.0"]
build-backend = "scikit_build_core.build"

[tool]
rye = { dev-dependencies = [
    "cibuildwheel>=2.22.0",
] }

[tool.scikit-build]
minimum-version = "0.9"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
sdist.exclude = [
    '\bench', '\.idea', '\.github', '\.vscode', '\utilities', '\formatter'
]

[tool.scikit-build.cmake]
version = ">=3.21"
#[tool.scikit-build.cmake.define]
#CMAKE_TOOLCHAIN_FILE = "C:/Program Files/Microsoft Visual Studio/2022/Community/VC/vcpkg/scripts/buildsystems/vcpkg.cmake"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "python/tests",
]
[tool.cibuildwheel]
build-frontend = "build[uv]"
build-verbosity = "1"
skip = ["*-win32", "*-manylinux*_i686", "*-musllinux*_i686", "pp*-win_*"]
test-command = "pytest -rq {project}/python/tests"
before-test = ["python -m ensurepip", "python -m pip install pytest"]

[tool.cibuildwheel.macos]
before-all = ["pipx install uv",
              "brew install autoconf automake libtool",
              "git clone https://github.com/microsoft/vcpkg.git",
              "chmod +x ./vcpkg/bootstrap-vcpkg.sh && ./vcpkg/bootstrap-vcpkg.sh"]
repair-wheel-command = "DYLD_LIBRARY_PATH=/Users/runner/work/planc/planc/build/ delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -vv {wheel}"
before-test = ["python -m ensurepip", "python -m pip install pytest", "python -m pip install -U pip", "python -m pip install scipy -Csetup-args=-Dblas=accelerate -Csetup-args=-Dlapack=accelerate"]
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.15"
SKBUILD_CMAKE_DEFINE="CMAKE_TOOLCHAIN_FILE=vcpkg/scripts/buildsystems/vcpkg.cmake"
environment.VCPKG_BINARY_SOURCES = "clear;x-gha,readwrite"
FC="gfortran-13"
[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment.MACOSX_DEPLOYMENT_TARGET="11"
environment.SKBUILD_CMAKE_DEFINE="CMAKE_TOOLCHAIN_FILE=vcpkg/scripts/buildsystems/vcpkg.cmake"
environment.VCPKG_BINARY_SOURCES = "clear;x-gha,readwrite"
environment.FC="gfortran-13"

[tool.cibuildwheel.linux]
before-all = ["yum install -y zip", "mkdir -p /host/tmp/vcpkg-binary"]
repair-wheel-command = "LD_LIBRARY_PATH=/project/build/ auditwheel repair -w {dest_dir} {wheel}"
#manylinux-x86_64-image = "manylinux_2_28"
#manylinux-pypy_x86_64-image = "manylinux_2_28"
#manylinux-aarch64-image = "manylinux_2_28"
#manylinux-pypy_aarch64-image = "manylinux_2_28"
musllinux-x86_64-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"
environment.SKBUILD_CMAKE_DEFINE = "CMAKE_TOOLCHAIN_FILE=/host/usr/local/share/vcpkg/scripts/buildsystems/vcpkg.cmake"
environment.CC = "gcc"
environment.CXX = "g++"
environment.VCPKG_INSTALLATION_ROOT = "/host/usr/local/share/vcpkg/"
environment.VCPKG_BINARY_SOURCES = "clear;x-gha,readwrite;files,/host/tmp/vcpkg-binary/,readwrite"
environment-pass = ["VCPKG_BINARY_SOURCES", "ACTIONS_CACHE_URL", "ACTIONS_RUNTIME_TOKEN"]
[[tool.cibuildwheel.overrides]]
select = "pp*-manylinux*"
environment.SKBUILD_CMAKE_DEFINE = "CMAKE_TOOLCHAIN_FILE=/host/usr/local/share/vcpkg/scripts/buildsystems/vcpkg.cmake"
environment.CC = "gcc"
environment.CXX = "g++"
environment.VCPKG_INSTALLATION_ROOT = "/host/usr/local/share/vcpkg/"
environment.VCPKG_BINARY_SOURCES = "clear;x-gha,readwrite;files,/host/tmp/vcpkg-binary/,readwrite"
environment-pass = ["VCPKG_BINARY_SOURCES", "ACTIONS_CACHE_URL", "ACTIONS_RUNTIME_TOKEN"]
before-test = ["python -m ensurepip", "python -m pip install pytest scipy-openblas32", 'python -c "import scipy_openblas32; print(scipy_openblas32.get_pkg_config())" > /usr/lib64/pkgconfig/scipy-openblas.pc',
"python -m pip install -U pip", "python -m pip install scipy"]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = ["apk add build-base cmake libtool zip unzip curl git samurai",
    "git clone https://github.com/microsoft/vcpkg.git",
    "chmod +x ./vcpkg/bootstrap-vcpkg.sh && ./vcpkg/bootstrap-vcpkg.sh",
    "./vcpkg/vcpkg install"]
environment.SKBUILD_CMAKE_DEFINE = "CMAKE_TOOLCHAIN_FILE=vcpkg/scripts/buildsystems/vcpkg.cmake"
environment.VCPKG_INSTALLATION_ROOT = "/host/usr/local/share/vcpkg/"
environment.VCPKG_BINARY_SOURCES = "clear;x-gha,readwrite;files,/host/tmp/vcpkg-binary/,readwrite"
environment-pass = ["VCPKG_BINARY_SOURCES", "ACTIONS_CACHE_URL", "ACTIONS_RUNTIME_TOKEN"]


#before-all = "apk add hwloc-dev armadillo-dev openblas-dev"

#[[tool.cibuildwheel.overrides]]
#select = "*-manylinux*"
#

[tool.cibuildwheel.windows]
before-all = ["pipx install uv"]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel} --add-path .\\build"
[tool.cibuildwheel.windows.environment]
SKBUILD_CMAKE_DEFINE="CMAKE_TOOLCHAIN_FILE=$VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake"
environment.VCPKG_BINARY_SOURCES = "clear;x-gha,readwrite"

