[package]
name = "fdars"
version = "0.1.0"
edition = "2021"
description = "Functional Data Analysis R bindings"
license = "MIT"
# CRAN Windows uses Rust 1.81.0, so we need compatible dependencies
rust-version = "1.81"

# Empty workspace table prevents Cargo from searching for parent workspace
# This is needed for R CMD check which copies package to a temp directory
[workspace]

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.8"
fdars-core = { version = "0.4.0", default-features = false, features = ["parallel"] }
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
rustfft = "6.2"
num-complex = "0.4"
nalgebra = "0.33"
