[package]
name = 'pdfsigner'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'pdfsigner'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9'
pdf_signer = { version = '0.2.0', default-features = false, features = ['https'] }

[profile.release]
lto = true
codegen-units = 1
